[gd_scene load_steps=4 format=2]

[ext_resource path="res://Main/Main Menu.gd" type="Script" id=1]
[ext_resource path="res://Scenery/Background.tscn" type="PackedScene" id=2]
[ext_resource path="res://themes/Font.tres" type="DynamicFont" id=4]

[node name="MainMenu" type="Node"]
pause_mode = 2
script = ExtResource( 1 )

[node name="ParallaxBackground" parent="." instance=ExtResource( 2 )]
offset = Vector2( -100, -100 )
scale = Vector2( 0.5, 0.5 )
transform = Transform2D( 0.5, 0, 0, 0.5, -100, -100 )

[node name="VBoxContainer" type="HBoxContainer" parent="."]
margin_left = 315.0
margin_top = 525.0
margin_right = 397.0
margin_bottom = 554.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="VBoxContainer"]
margin_right = 48.0
margin_bottom = 29.0
custom_fonts/font = ExtResource( 4 )
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="Button" parent="VBoxContainer"]
margin_left = 52.0
margin_right = 94.0
margin_bottom = 29.0
custom_fonts/font = ExtResource( 4 )
text = "Play"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="VBoxContainer/Play" to="." method="_on_Play_pressed"]
